--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "@types/react": "18.2.15",
     "tsup": "8.3.0",
-    "react": "18.2.0",
+    "react": "18.2.0"
   },
   "peerDependencies": {
     "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
