--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "react": "18.2.0"
   },
   "peerDependencies": {
-    "react": "^16.0.0 || ^17.0.0 || ^18.0.0",
-    "@chat77npm/js": "workspace:*"
+    "react": "^16.0.0 || ^17.0.0 || ^18.0.0"
   }
 }
